--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,6 +3,7 @@
 }
 
 body {
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
